kubernetes files/django-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testapp-deployment
  labels:
    app: testapp
spec:
  replicas: 1  # Number of replicas
  selector:
    matchLabels:
      app: testapp
  template:
    metadata:
      labels:
        app: testapp
    spec:
      containers:
      - name: testapp-container
        image: thelizri432/test:v2
        ports:
        - containerPort: 8000
