kubernetes files/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
  labels:
    app: django-app
  namespace: django
spec:
  replicas: 1  # Number of replicas
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
      - name: django-container
        image: thelizri432/django:v1
        ports:
        - containerPort: 8000
