kubernetes files/db.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
  namespace: django
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgres
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: thelizri432/django:db1
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
          subPath: postgresql_db  # This line is added to use a subdirectory
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc
