kubernetes files/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: testapp
  name: testapp
spec:
  type: NodePort
  ports:
  - name: "django-service"
    port: 8000
    targetPort: 8000
  selector:
    app: testapp
