kubernetes files/django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
  labels:
    app: django-app
  namespace: django
spec:
  replicas: 1  # Number of replicas
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
      - name: django-container
        image: thelizri432/django:zalando
        ports:
        - containerPort: 8000 
---
apiVersion: v1
kind: Service
metadata:
  name: django-service
  labels:
    app: django-app
  namespace: django
spec:
  type: NodePort
  ports:
  - name: "django-service-8000"
    port: 8000
    targetPort: 8000
  selector:
    app: django-app
